# 3DViewer

./: .gitignore  Jenkinsfile  README.md
src/: CMakeLists.txt  Doxyfile  Jenkinsfile  Makefile  README.md  main.cc
src/controller/: controller.h
src/core/: model.h  obj.cc  obj.h
src/core/obj_modifier_strategy/: centring_strategy.cc  centring_strategy.h  obj_modifier.h  obj_modifier_strategy.h  rotate_strategy.cc  rotate_strategy.h  scale_strategy.cc  scale_strategy.h  translation_strategy.cc  translation_strategy.h
src/documentation/html/: annotated.html  centring__strategy_8h_source.html  class_main_widget-members.html  class_main_widget.html  class_open_g_l_widget-members.html  class_open_g_l_widget.html  class_setting_state-members.html  class_setting_state.html  classes.html  classs21_1_1_centring_strategy-members.html  classs21_1_1_centring_strategy.html  classs21_1_1_controller-members.html  classs21_1_1_controller.html  classs21_1_1_model-members.html  classs21_1_1_model.html  classs21_1_1_obj-members.html  classs21_1_1_obj.html  classs21_1_1_obj_modifier-members.html  classs21_1_1_obj_modifier.html  classs21_1_1_rotate_strategy-members.html  classs21_1_1_rotate_strategy.html  classs21_1_1_scaling_strategy-members.html  classs21_1_1_scaling_strategy.html  classs21_1_1_translation_strategy-members.html  classs21_1_1_translation_strategy.html  controller_8h_source.html  files.html  (+26 more)
src/model/: obj.cc  obj.h  obj_modifier.h  obj_modifier_stategy.cc  obj_modifier_stategy.h
src/tests/: facet_test.cc  obj_modifier_test.cc  obj_test.cc  read_file_test.cc  vertex_test.cc
src/view/: gl_view.cc  gl_view.h  main_widget.cc  main_widget.h  main_widget.ui
(+86 files in other folders)
